Made a quick change to global.css to fix a spacing issue I noticed
I promise I didn't break anything, and I marked the change I made just in case

--- a/pages/global.css
+++ b/pages/global.css
@@ -95,6 +95,9 @@ html{
 #mainBodyHeader h1{
     background-color: white;
     padding: 0.5em;
+	/* This is the change I made to fix bottom spacing with headers.  
+	 – Dylan */
+	padding-bottom: 1.5em;
     font-size: 30px;
     font-weight: bold;
     height: 5vh
